--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.2.26",
     "vue-router": "^4.0.3"
   },
